<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_base"
    tools:context=".ui.hutang.tambah.TambahHutangFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_arta_lele2"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="88dp"
                    android:text="@string/masukkan_nominal"
                    android:textSize="14sp" />


                <LinearLayout
                    android:id="@+id/select_total"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/bg_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12dp"
                    android:paddingBottom="12dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp" />

                    <TextView
                        android:id="@+id/tv_total"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/zero_price"
                        android:textSize="26sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/select_weight"
                    android:visibility="gone"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp" />

                    <TextView
                        android:id="@+id/tv_weight"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/zero_weight"
                        android:textSize="26sp" />

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/bg_item"
                    android:id="@+id/add_penghutang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:src="@drawable/ic_contact"
                        style="@style/ArtaLeleImageTambahStyle"  />

                    <EditText
                        android:focusable="true"
                        android:id="@+id/edt_nama"
                        android:layout_width="match_parent"
                        android:hint="@string/nama"
                        android:layout_marginStart="16dp"
                        android:background="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/bg_item"
                    android:id="@+id/add_keperluan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:src="@drawable/ic_note"
                        style="@style/ArtaLeleImageTambahStyle"/>

                    <EditText
                        android:focusable="true"
                        android:id="@+id/edt_keperluan"
                        android:layout_width="match_parent"
                        android:hint="@string/keperluan"
                        android:layout_marginStart="16dp"
                        android:background="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/bg_item"
                    android:id="@+id/select_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:src="@drawable/ic_date"
                        style="@style/ArtaLeleImageTambahStyle"  />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/pilih_tanggal"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_save"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:text="@string/simpan"
            android:layout_marginHorizontal="16dp"
            android:layout_width="200dp"
            android:layout_height="60dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>