<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_base"
    tools:context=".ui.home.tambah.TambahTransaksiFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_arta_lele3"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/select_total_or_weight"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp" />

                    <TextView
                        android:id="@+id/tv_total_or_weight"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/zero"
                        android:textSize="26sp" />

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/bg_item"
                    android:id="@+id/select_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/img_category"
                        style="@style/ArtaLeleImageTambahStyle"/>

                    <TextView
                        android:id="@+id/tv_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/pilih_kategori"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/bg_item"
                    android:id="@+id/add_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:src="@drawable/ic_note"
                        style="@style/ArtaLeleImageTambahStyle" />

                    <TextView
                        android:id="@+id/tv_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/tambahkan_deskripsi"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/bg_item"
                    android:id="@+id/select_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:src="@drawable/ic_date"
                        style="@style/ArtaLeleImageTambahStyle"  />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/pilih_tanggal"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_grand_total"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@drawable/bg_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/total"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_grand_total"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/zero_price"
                    android:textSize="26sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>



    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.appcompat.widget.LinearLayoutCompat>